# ndc

./: CMakeLists.txt  README.md
include/ndc/: allocator.h  audio.h  error.h  gl_utils.h  io.h  math.h  window.h
scripts/: gl_parser.py
src/: allocator.c  audio.c  error.c  gl_utils.c  io.c  main.c  math.c  window.c
